# beacon

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/beacon/: Cargo.toml
crates/beacon/src/: agent_skills.rs  lib.rs  main.rs  providers.rs
crates/beacon/tests/: agent_skills_cli_contract.rs  cli_contract.rs  core_contract.rs  homebrew_cli_contract.rs  provider_boundary.rs  upgrade_safety_cli_contract.rs  ux_contract.rs  version_and_state.rs
docs/: domain-glossary.md
docs/adr/: 0001-two-layer-provider-model.md  0002-schema-and-local-state-v2.md  0003-config-selection-and-catalog-v3.md  0004-skills-package-runner-boundary.md  0005-scoped-history-local-state-v3.md  0006-independent-inventory-catalog-config-v4.md
scripts/: render-homebrew-formula.mjs  stage-npm-package.mjs  verify-release-version.mjs
skills/beacon/: SKILL.md
skills/beacon/agents/: openai.yaml
tests/: distribution.test.mjs  skill-contract.test.mjs
